corrected alignment

--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,3 @@ footer h6 {
         background-color: black;
         color: white;
     }
-
-.text-stuff {
-    align-content: center;
-}
